--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Nova filha do Neymar</h1>
+    <h2>História</h2>
     <p>Mulher quer que Neymar assuma maior de idade</p>
+    <h2>foto do cara</h2>
+    <img src="https://th.bing.com/th/id/R.b3b2bf1f68cf904a9a276a6fc74aa97e?rik=DvVbm3S061IsmQ&pid=ImgRaw&r=0" alt="">
 </body>
 </html>
